--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -1,3 +1,3 @@
-/* This is for all IE specfific style less than IE9. We hate IE. */
+/* This is for all IE-specfific styles, less than IE9. */
 
 	div.panel { border: 1px solid #ccc; }
